0025413: Line-Shape intersection algorithm became 400 times slower

Changed the procedure of creating initial samples

Test-case for issue #25413